{
  "version": 4,
  "terraform_version": "1.15.3",
  "serial": 364,
  "lineage": "80dee15c-da21-3767-8983-09dae371116f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00f5c11580315dee6",
            "arn": "arn:aws:ec2:us-east-2:939365917432:elastic-ip/eipalloc-00f5c11580315dee6",
            "association_id": "eipassoc-0d85a46bbbb349b0c",
            "domain": "vpc",
            "id": "eipalloc-00f5c11580315dee6",
            "network_border_group": "us-east-2",
            "network_interface": "eni-00a327c92c7e7a5b7",
            "private_dns": "ip-10-0-7-200.us-east-2.compute.internal",
            "private_ip": "10.0.7.200",
            "public_dns": "ec2-18-119-58-67.us-east-2.compute.amazonaws.com",
            "public_ip": "18.119.58.67",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Application": "splunk",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-nat-eip",
              "Project": "splunk"
            },
            "tags_all": {
              "Application": "splunk",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-nat-eip",
              "Project": "splunk"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.splunk",
            "aws_vpc.splunk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02e13330d2ab7d08b",
            "arn": "arn:aws:ec2:us-east-2:939365917432:elastic-ip/eipalloc-02e13330d2ab7d08b",
            "association_id": "eipassoc-05573b5be642c3444",
            "domain": "vpc",
            "id": "eipalloc-02e13330d2ab7d08b",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0f4802b1a731d0e9b",
            "private_dns": "ip-10-0-10-239.us-east-2.compute.internal",
            "private_ip": "10.0.10.239",
            "public_dns": "ec2-3-151-117-133.us-east-2.compute.amazonaws.com",
            "public_ip": "3.151.117.133",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Application": "splunk",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-nlb-eip",
              "Project": "splunk"
            },
            "tags_all": {
              "Application": "splunk",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-nlb-eip",
              "Project": "splunk"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.splunk",
            "aws_vpc.splunk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "splunk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "enterprise_security",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05fea2388c6b822d4",
            "arn": "arn:aws:ec2:us-east-2:939365917432:instance/i-01401928f945c9cc1",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01401928f945c9cc1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Splunk-server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06c0f5a1ec6c98625",
            "private_dns": "ip-10-0-131-12.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.131.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-2:939365917432:key/fcc1e09e-2f51-430c-94e9-6877b9abf327",
                "throughput": 125,
                "volume_id": "vol-0638e83eff0c493fe",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-096a5d3c92f3e8fd7",
            "tags": {
              "AZ": "us-east-2a",
              "Application": "splunk",
              "Component": "Splunk Enterprise Security",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-enterprise-security",
              "Project": "splunk",
              "Role": "standalone-search-head"
            },
            "tags_all": {
              "AZ": "us-east-2a",
              "Application": "splunk",
              "Component": "Splunk Enterprise Security",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-enterprise-security",
              "Project": "splunk",
              "Role": "standalone-search-head"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0925d12ddeeeea3fc"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.nlb",
            "aws_security_group.splunk_nodes",
            "aws_subnet.private",
            "aws_vpc.splunk",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "indexer_1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05fea2388c6b822d4",
            "arn": "arn:aws:ec2:us-east-2:939365917432:instance/i-07bcfdb4247f9ae3d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07bcfdb4247f9ae3d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Splunk-server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07d19c353e3558f32",
            "private_dns": "ip-10-0-130-51.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.130.51",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-2:939365917432:key/fcc1e09e-2f51-430c-94e9-6877b9abf327",
                "throughput": 125,
                "volume_id": "vol-0878e71618e02971c",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-096a5d3c92f3e8fd7",
            "tags": {
              "AZ": "us-east-2a",
              "Application": "splunk",
              "Component": "Indexer 1",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-indexer-1",
              "Project": "splunk",
              "Role": "indexer"
            },
            "tags_all": {
              "AZ": "us-east-2a",
              "Application": "splunk",
              "Component": "Indexer 1",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-indexer-1",
              "Project": "splunk",
              "Role": "indexer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0925d12ddeeeea3fc"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.nlb",
            "aws_security_group.splunk_nodes",
            "aws_subnet.private",
            "aws_vpc.splunk",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "indexer_2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05fea2388c6b822d4",
            "arn": "arn:aws:ec2:us-east-2:939365917432:instance/i-00dd22d0ab7298ed8",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00dd22d0ab7298ed8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Splunk-server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bc797b6ed4d91ff6",
            "private_dns": "ip-10-0-139-143.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.139.143",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-2:939365917432:key/fcc1e09e-2f51-430c-94e9-6877b9abf327",
                "throughput": 125,
                "volume_id": "vol-042f6c8a14efc56a5",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-096a5d3c92f3e8fd7",
            "tags": {
              "AZ": "us-east-2a",
              "Application": "splunk",
              "Component": "Indexer 2",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-indexer-2",
              "Project": "splunk",
              "Role": "indexer"
            },
            "tags_all": {
              "AZ": "us-east-2a",
              "Application": "splunk",
              "Component": "Indexer 2",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-indexer-2",
              "Project": "splunk",
              "Role": "indexer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0925d12ddeeeea3fc"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.nlb",
            "aws_security_group.splunk_nodes",
            "aws_subnet.private",
            "aws_vpc.splunk",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "indexer_3",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05fea2388c6b822d4",
            "arn": "arn:aws:ec2:us-east-2:939365917432:instance/i-0680edb7f52c06375",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0680edb7f52c06375",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Splunk-server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a26a0b6836b68d68",
            "private_dns": "ip-10-0-145-66.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.145.66",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-2:939365917432:key/fcc1e09e-2f51-430c-94e9-6877b9abf327",
                "throughput": 125,
                "volume_id": "vol-0892e00ef8034a969",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04b839bb786511d9b",
            "tags": {
              "AZ": "us-east-2b",
              "Application": "splunk",
              "Component": "Indexer 3",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-indexer-3",
              "Project": "splunk",
              "Role": "indexer"
            },
            "tags_all": {
              "AZ": "us-east-2b",
              "Application": "splunk",
              "Component": "Indexer 3",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-indexer-3",
              "Project": "splunk",
              "Role": "indexer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0925d12ddeeeea3fc"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.nlb",
            "aws_security_group.splunk_nodes",
            "aws_subnet.private",
            "aws_vpc.splunk",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "indexer_4",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05fea2388c6b822d4",
            "arn": "arn:aws:ec2:us-east-2:939365917432:instance/i-02e8a6f26e005db3e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02e8a6f26e005db3e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Splunk-server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-023f8aa2dc3b22860",
            "private_dns": "ip-10-0-152-162.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.152.162",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-2:939365917432:key/fcc1e09e-2f51-430c-94e9-6877b9abf327",
                "throughput": 125,
                "volume_id": "vol-02189f4fcc87d0ade",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04b839bb786511d9b",
            "tags": {
              "AZ": "us-east-2b",
              "Application": "splunk",
              "Component": "Indexer 4",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-indexer-4",
              "Project": "splunk",
              "Role": "indexer"
            },
            "tags_all": {
              "AZ": "us-east-2b",
              "Application": "splunk",
              "Component": "Indexer 4",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-indexer-4",
              "Project": "splunk",
              "Role": "indexer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0925d12ddeeeea3fc"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.nlb",
            "aws_security_group.splunk_nodes",
            "aws_subnet.private",
            "aws_vpc.splunk",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "license_deployer",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05fea2388c6b822d4",
            "arn": "arn:aws:ec2:us-east-2:939365917432:instance/i-074de7b19270af98a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-074de7b19270af98a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Splunk-server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e0a712de8a54fef6",
            "private_dns": "ip-10-0-137-177.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.137.177",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-2:939365917432:key/fcc1e09e-2f51-430c-94e9-6877b9abf327",
                "throughput": 125,
                "volume_id": "vol-064f9f6f4e73211ee",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-096a5d3c92f3e8fd7",
            "tags": {
              "AZ": "us-east-2a",
              "Application": "splunk",
              "Component": "License Manager + Deployment Server + Deployer",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-license-manager-deployer",
              "Project": "splunk",
              "Role": "cluster-management"
            },
            "tags_all": {
              "AZ": "us-east-2a",
              "Application": "splunk",
              "Component": "License Manager + Deployment Server + Deployer",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-license-manager-deployer",
              "Project": "splunk",
              "Role": "cluster-management"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0925d12ddeeeea3fc"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.nlb",
            "aws_security_group.splunk_nodes",
            "aws_subnet.private",
            "aws_vpc.splunk",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "monitoring_console",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05fea2388c6b822d4",
            "arn": "arn:aws:ec2:us-east-2:939365917432:instance/i-05f671ac3841a85f1",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05f671ac3841a85f1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Splunk-server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b3dd64c24794cba5",
            "private_dns": "ip-10-0-158-143.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.158.143",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-2:939365917432:key/fcc1e09e-2f51-430c-94e9-6877b9abf327",
                "throughput": 125,
                "volume_id": "vol-0089c29fa745f55d4",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04b839bb786511d9b",
            "tags": {
              "AZ": "us-east-2b",
              "Application": "splunk",
              "Component": "Monitoring Console",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-monitoring-console",
              "Project": "splunk",
              "Role": "standalone-search-head"
            },
            "tags_all": {
              "AZ": "us-east-2b",
              "Application": "splunk",
              "Component": "Monitoring Console",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-monitoring-console",
              "Project": "splunk",
              "Role": "standalone-search-head"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0925d12ddeeeea3fc"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.nlb",
            "aws_security_group.splunk_nodes",
            "aws_subnet.private",
            "aws_vpc.splunk",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "search_head_1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05fea2388c6b822d4",
            "arn": "arn:aws:ec2:us-east-2:939365917432:instance/i-0adac8281687b2c21",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0adac8281687b2c21",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Splunk-server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fcd47833a828a296",
            "private_dns": "ip-10-0-133-59.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.133.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-2:939365917432:key/fcc1e09e-2f51-430c-94e9-6877b9abf327",
                "throughput": 125,
                "volume_id": "vol-0c0c763d8b15c7c6b",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-096a5d3c92f3e8fd7",
            "tags": {
              "AZ": "us-east-2a",
              "Application": "splunk",
              "Component": "Search Head Cluster Node 1",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-search-head-1",
              "Project": "splunk",
              "Role": "search-head-cluster"
            },
            "tags_all": {
              "AZ": "us-east-2a",
              "Application": "splunk",
              "Component": "Search Head Cluster Node 1",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-search-head-1",
              "Project": "splunk",
              "Role": "search-head-cluster"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0925d12ddeeeea3fc"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.nlb",
            "aws_security_group.splunk_nodes",
            "aws_subnet.private",
            "aws_vpc.splunk",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "search_head_2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05fea2388c6b822d4",
            "arn": "arn:aws:ec2:us-east-2:939365917432:instance/i-087febbecac8687d8",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-087febbecac8687d8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Splunk-server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-042ed7f7f827a6368",
            "private_dns": "ip-10-0-158-219.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.158.219",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-2:939365917432:key/fcc1e09e-2f51-430c-94e9-6877b9abf327",
                "throughput": 125,
                "volume_id": "vol-03d7df7b883e7934d",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04b839bb786511d9b",
            "tags": {
              "AZ": "us-east-2b",
              "Application": "splunk",
              "Component": "Search Head Cluster Node 2",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-search-head-2",
              "Project": "splunk",
              "Role": "search-head-cluster"
            },
            "tags_all": {
              "AZ": "us-east-2b",
              "Application": "splunk",
              "Component": "Search Head Cluster Node 2",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-search-head-2",
              "Project": "splunk",
              "Role": "search-head-cluster"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0925d12ddeeeea3fc"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.nlb",
            "aws_security_group.splunk_nodes",
            "aws_subnet.private",
            "aws_vpc.splunk",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "splunk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:939365917432:internet-gateway/igw-0ddfe69ac15265cc9",
            "id": "igw-0ddfe69ac15265cc9",
            "owner_id": "939365917432",
            "tags": {
              "Application": "splunk",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-igw",
              "Project": "splunk"
            },
            "tags_all": {
              "Application": "splunk",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-igw",
              "Project": "splunk"
            },
            "vpc_id": "vpc-07d713bb1dcdc0096"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.splunk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:939365917432:loadbalancer/app/splunk-alb/cac47b4fa606628d",
            "arn_suffix": "app/splunk-alb/cac47b4fa606628d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "splunk-alb-1709930352.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:939365917432:loadbalancer/app/splunk-alb/cac47b4fa606628d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "splunk-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05209baadaf76171e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01d17265405d0fb33"
              },
              {
                "subnet_id": "subnet-02d1199bf7a55ceac"
              },
              {
                "subnet_id": "subnet-02d125d5128dc68ab"
              }
            ],
            "subnets": [
              "subnet-01d17265405d0fb33",
              "subnet-02d1199bf7a55ceac",
              "subnet-02d125d5128dc68ab"
            ],
            "tags": {
              "Application": "splunk",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-alb",
              "Project": "splunk"
            },
            "tags_all": {
              "Application": "splunk",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-alb",
              "Project": "splunk"
            },
            "vpc_id": "vpc-07d713bb1dcdc0096",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.nlb",
            "aws_subnet.public",
            "aws_vpc.splunk",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:939365917432:loadbalancer/net/splunk-nlb/4889180ee609a22a",
            "arn_suffix": "net/splunk-nlb/4889180ee609a22a",
            "dns_name": "splunk-nlb-4889180ee609a22a.elb.us-east-2.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:939365917432:loadbalancer/net/splunk-nlb/4889180ee609a22a",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "splunk-nlb",
            "security_groups": [
              "sg-01860a9f03882ca3c"
            ],
            "subnet_mapping": [
              {
                "allocation_id": "eipalloc-02e13330d2ab7d08b",
                "subnet_id": "subnet-02d1199bf7a55ceac"
              }
            ],
            "subnets": [
              "subnet-02d1199bf7a55ceac"
            ],
            "tags": {
              "Application": "splunk",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-nlb",
              "Project": "splunk"
            },
            "tags_all": {
              "Application": "splunk",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-nlb",
              "Project": "splunk"
            },
            "vpc_id": "vpc-07d713bb1dcdc0096",
            "zone_id": "ZLMOA37VPKANP"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nlb",
            "aws_internet_gateway.splunk",
            "aws_security_group.nlb",
            "aws_subnet.public",
            "aws_vpc.splunk",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:939365917432:listener/app/splunk-alb/cac47b4fa606628d/efee090f8638cfc3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:939365917432:targetgroup/splunk-sh-web-tg/c9586fa557d5f1e5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:939365917432:listener/app/splunk-alb/cac47b4fa606628d/efee090f8638cfc3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:939365917432:loadbalancer/app/splunk-alb/cac47b4fa606628d",
            "mutual_authentication": [],
            "port": 8000,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.splunk_web",
            "aws_security_group.alb",
            "aws_security_group.nlb",
            "aws_subnet.public",
            "aws_vpc.splunk",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nlb_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nlb_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:939365917432:listener/net/splunk-nlb/4889180ee609a22a/6bab6f647cc17dde",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:939365917432:targetgroup/splunk-nlb-alb-8000/1fcff3b843027440",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:939365917432:listener/net/splunk-nlb/4889180ee609a22a/6bab6f647cc17dde",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:939365917432:loadbalancer/net/splunk-nlb/4889180ee609a22a",
            "mutual_authentication": [],
            "port": 8000,
            "protocol": "TCP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nlb",
            "aws_internet_gateway.splunk",
            "aws_lb.alb",
            "aws_lb.nlb",
            "aws_lb_listener.alb_web",
            "aws_lb_target_group.nlb_to_alb_web",
            "aws_lb_target_group.splunk_web",
            "aws_lb_target_group_attachment.nlb_to_alb_web",
            "aws_security_group.alb",
            "aws_security_group.nlb",
            "aws_subnet.public",
            "aws_vpc.splunk",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nlb_to_alb_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nlb_to_alb_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:939365917432:targetgroup/splunk-nlb-alb-8000/1fcff3b843027440",
            "arn_suffix": "targetgroup/splunk-nlb-alb-8000/1fcff3b843027440",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "8000",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:939365917432:targetgroup/splunk-nlb-alb-8000/1fcff3b843027440",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-2:939365917432:loadbalancer/net/splunk-nlb/4889180ee609a22a"
            ],
            "name": "splunk-nlb-alb-8000",
            "port": 8000,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Application": "splunk",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-nlb-alb-8000",
              "Project": "splunk"
            },
            "tags_all": {
              "Application": "splunk",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-nlb-alb-8000",
              "Project": "splunk"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "alb",
            "vpc_id": "vpc-07d713bb1dcdc0096"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.splunk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "splunk_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:939365917432:targetgroup/splunk-sh-web-tg/c9586fa557d5f1e5",
            "arn_suffix": "targetgroup/splunk-sh-web-tg/c9586fa557d5f1e5",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:939365917432:targetgroup/splunk-sh-web-tg/c9586fa557d5f1e5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-2:939365917432:loadbalancer/app/splunk-alb/cac47b4fa606628d"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "splunk-sh-web-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Application": "splunk",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-sh-web-tg",
              "Project": "splunk"
            },
            "tags_all": {
              "Application": "splunk",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-sh-web-tg",
              "Project": "splunk"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07d713bb1dcdc0096"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.splunk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nlb_to_alb_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nlb_to_alb_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:939365917432:targetgroup/splunk-nlb-alb-8000/1fcff3b843027440-20260708064038025500000017",
            "port": 8000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:939365917432:targetgroup/splunk-nlb-alb-8000/1fcff3b843027440",
            "target_id": "arn:aws:elasticloadbalancing:us-east-2:939365917432:loadbalancer/app/splunk-alb/cac47b4fa606628d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_listener.alb_web",
            "aws_lb_target_group.nlb_to_alb_web",
            "aws_lb_target_group.splunk_web",
            "aws_security_group.alb",
            "aws_security_group.nlb",
            "aws_subnet.public",
            "aws_vpc.splunk",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "splunk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00f5c11580315dee6",
            "association_id": "eipassoc-0d85a46bbbb349b0c",
            "connectivity_type": "public",
            "id": "nat-01085806cd81d472b",
            "network_interface_id": "eni-00a327c92c7e7a5b7",
            "private_ip": "10.0.7.200",
            "public_ip": "18.119.58.67",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02d1199bf7a55ceac",
            "tags": {
              "Application": "splunk",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-nat",
              "Project": "splunk"
            },
            "tags_all": {
              "Application": "splunk",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-nat",
              "Project": "splunk"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.splunk",
            "aws_subnet.public",
            "aws_vpc.splunk",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:939365917432:route-table/rtb-0bccfee203ff1f0d3",
            "id": "rtb-0bccfee203ff1f0d3",
            "owner_id": "939365917432",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01085806cd81d472b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Application": "splunk",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-private-rt",
              "Project": "splunk"
            },
            "tags_all": {
              "Application": "splunk",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-private-rt",
              "Project": "splunk"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d713bb1dcdc0096"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.splunk",
            "aws_nat_gateway.splunk",
            "aws_subnet.public",
            "aws_vpc.splunk",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:939365917432:route-table/rtb-0bc41be23a646f07d",
            "id": "rtb-0bc41be23a646f07d",
            "owner_id": "939365917432",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ddfe69ac15265cc9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Application": "splunk",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-public-rt",
              "Project": "splunk"
            },
            "tags_all": {
              "Application": "splunk",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-public-rt",
              "Project": "splunk"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d713bb1dcdc0096"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.splunk",
            "aws_vpc.splunk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6bdd7c03acaf927",
            "route_table_id": "rtb-0bccfee203ff1f0d3",
            "subnet_id": "subnet-096a5d3c92f3e8fd7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.splunk",
            "aws_nat_gateway.splunk",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.splunk",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0778f351caf242dc1",
            "route_table_id": "rtb-0bccfee203ff1f0d3",
            "subnet_id": "subnet-04b839bb786511d9b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.splunk",
            "aws_nat_gateway.splunk",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.splunk",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06bd985f1fd69e09f",
            "route_table_id": "rtb-0bccfee203ff1f0d3",
            "subnet_id": "subnet-063224cde9ed48ebb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.splunk",
            "aws_nat_gateway.splunk",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.splunk",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1fcc429395d845c",
            "route_table_id": "rtb-0bc41be23a646f07d",
            "subnet_id": "subnet-02d1199bf7a55ceac"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.splunk",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.splunk",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca59ebb4d90dc278",
            "route_table_id": "rtb-0bc41be23a646f07d",
            "subnet_id": "subnet-02d125d5128dc68ab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.splunk",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.splunk",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01add8bcec48d1f77",
            "route_table_id": "rtb-0bc41be23a646f07d",
            "subnet_id": "subnet-01d17265405d0fb33"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.splunk",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.splunk",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:939365917432:security-group/sg-05209baadaf76171e",
            "description": "Security group for Splunk Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05209baadaf76171e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Splunk Web UI from internet",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS from NLB",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01860a9f03882ca3c"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Splunk Web UI from NLB",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01860a9f03882ca3c"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "splunk-alb-sg",
            "name_prefix": "",
            "owner_id": "939365917432",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "splunk",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-alb-sg",
              "Project": "splunk"
            },
            "tags_all": {
              "Application": "splunk",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-alb-sg",
              "Project": "splunk"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d713bb1dcdc0096"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.nlb",
            "aws_vpc.splunk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:939365917432:security-group/sg-0d258063728a69fff",
            "description": "Security group for Splunk EFS cold storage",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d258063728a69fff",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "NFS from Splunk indexers",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0925d12ddeeeea3fc"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "splunk-efs-sg",
            "name_prefix": "",
            "owner_id": "939365917432",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "splunk",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-efs-sg",
              "Project": "splunk"
            },
            "tags_all": {
              "Application": "splunk",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-efs-sg",
              "Project": "splunk"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d713bb1dcdc0096"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.nlb",
            "aws_security_group.splunk_nodes",
            "aws_vpc.splunk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:939365917432:security-group/sg-01860a9f03882ca3c",
            "description": "Security group for Splunk Network Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01860a9f03882ca3c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Splunk Web UI from internet",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "splunk-nlb-sg",
            "name_prefix": "",
            "owner_id": "939365917432",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "splunk",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-nlb-sg",
              "Project": "splunk"
            },
            "tags_all": {
              "Application": "splunk",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-nlb-sg",
              "Project": "splunk"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d713bb1dcdc0096"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.splunk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "splunk_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:939365917432:security-group/sg-0925d12ddeeeea3fc",
            "description": "Security group for all Splunk EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0925d12ddeeeea3fc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH administration",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16",
                  "0.0.0.0/0"
                ],
                "description": "HTTP Event Collector 8088",
                "from_port": 8088,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8088
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16",
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16",
                  "0.0.0.0/0"
                ],
                "description": "Splunk forwarder receiving port 9997",
                "from_port": 9997,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9997
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Indexer/SH cluster replication 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Indexer/SH cluster replication 8081",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "KV Store 8191",
                "from_port": 8191,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8191
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Splunk Web UI internal",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Splunk management port 8089",
                "from_port": 8089,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8089
              },
              {
                "cidr_blocks": [],
                "description": "Splunk Web UI from ALB",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05209baadaf76171e"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "splunk-nodes-sg",
            "name_prefix": "",
            "owner_id": "939365917432",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "splunk",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-nodes-sg",
              "Project": "splunk"
            },
            "tags_all": {
              "Application": "splunk",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-nodes-sg",
              "Project": "splunk"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d713bb1dcdc0096"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.nlb",
            "aws_vpc.splunk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:939365917432:subnet/subnet-096a5d3c92f3e8fd7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096a5d3c92f3e8fd7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "939365917432",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "splunk",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-private-a",
              "Project": "splunk",
              "Tier": "private"
            },
            "tags_all": {
              "Application": "splunk",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-private-a",
              "Project": "splunk",
              "Tier": "private"
            },
            "vpc_id": "vpc-07d713bb1dcdc0096"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.splunk",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:939365917432:subnet/subnet-04b839bb786511d9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b839bb786511d9b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "939365917432",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "splunk",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-private-b",
              "Project": "splunk",
              "Tier": "private"
            },
            "tags_all": {
              "Application": "splunk",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-private-b",
              "Project": "splunk",
              "Tier": "private"
            },
            "vpc_id": "vpc-07d713bb1dcdc0096"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.splunk",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:939365917432:subnet/subnet-063224cde9ed48ebb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.160.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063224cde9ed48ebb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "939365917432",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "splunk",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-private-c",
              "Project": "splunk",
              "Tier": "private"
            },
            "tags_all": {
              "Application": "splunk",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-private-c",
              "Project": "splunk",
              "Tier": "private"
            },
            "vpc_id": "vpc-07d713bb1dcdc0096"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.splunk",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:939365917432:subnet/subnet-02d1199bf7a55ceac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d1199bf7a55ceac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "939365917432",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "splunk",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-public-a",
              "Project": "splunk",
              "Tier": "public"
            },
            "tags_all": {
              "Application": "splunk",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-public-a",
              "Project": "splunk",
              "Tier": "public"
            },
            "vpc_id": "vpc-07d713bb1dcdc0096"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.splunk",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:939365917432:subnet/subnet-02d125d5128dc68ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d125d5128dc68ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "939365917432",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "splunk",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-public-b",
              "Project": "splunk",
              "Tier": "public"
            },
            "tags_all": {
              "Application": "splunk",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-public-b",
              "Project": "splunk",
              "Tier": "public"
            },
            "vpc_id": "vpc-07d713bb1dcdc0096"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.splunk",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:939365917432:subnet/subnet-01d17265405d0fb33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d17265405d0fb33",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "939365917432",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "splunk",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-public-c",
              "Project": "splunk",
              "Tier": "public"
            },
            "tags_all": {
              "Application": "splunk",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-public-c",
              "Project": "splunk",
              "Tier": "public"
            },
            "vpc_id": "vpc-07d713bb1dcdc0096"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.splunk",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "splunk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:939365917432:vpc/vpc-07d713bb1dcdc0096",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-028f19aed1015bb74",
            "default_route_table_id": "rtb-05ec9b3715cd79933",
            "default_security_group_id": "sg-00e92f530e07ddb74",
            "dhcp_options_id": "dopt-025a9258713087e34",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07d713bb1dcdc0096",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05ec9b3715cd79933",
            "owner_id": "939365917432",
            "tags": {
              "Application": "splunk",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-vpc",
              "Project": "splunk"
            },
            "tags_all": {
              "Application": "splunk",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "splunk-vpc",
              "Project": "splunk"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}